Grunt file for livereload. Tweaking some styles.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<!-- Directives -->
 	<script type="text/javascript" src="app/directives/awardcard.js"></script>
 	<script type="text/javascript" src="app/directives/newspapercard.js"></script>
-
+	<script src="//localhost:35729/livereload.js"></script>
 	<!-- Services -->
 	<!-- <script type="text/javascript" src="app/services"></script>	 -->
 </head>
