Dynamically loading Igor Nasibyans images from the server. Node connects to Anguar which connects to frontend. Front end improvements coming in next updaate.

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 	</md-content>
 	<md-content id="artcollection" class="contentarea evencontent" ng-class="{expanded: expandedClass}" style="background-color: grey; color: black;" ng-controller="ArtController">
 		<div id="artheadbar" flex> 
-			<md-button id="ViewCollectionButton" class="md-raised" style="color: grey;" ng-click="showDialog()">View the Collection</md-button>
+			<md-button id="ViewCollectionButton" class="md-raised" style="color: grey;" ng-click="displayArt()">View the Collection</md-button>
 		</div>
 	</md-content>
 	<md-content id="awards" class="contentarea oddcontent" flex>
