Award section appropriate resize and display, award frontend greatly iimproved.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="app/styles/picanimation.css">
 	<link rel="stylesheet" type="text/css" href="app/styles/artcollection.css">
+	<link rel="stylesheet" type="text/css" href="app/styles/awardcard.css">
+
+	<!-- Font -->
+	<link href="https://fonts.googleapis.com/css?family=Abel|Farsan|Galada|Lobster|Mitr|Poiret+One|Scope+One|Shadows+Into+Light" rel="stylesheet">
+
 
 	<!-- Sources -->
 	<script type="text/javascript" src="node_modules/angular/angular.min.js"></script>
@@ -42,6 +47,8 @@
 
 	<!-- Services -->
 	<script type="text/javascript" src="app/services/NodeConnection.js"></script>	
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body ng-app="IgorNasibyan" >
 <md-toolbar id="navbar">
