Connect section refactored. Removed map. Mobile mode improvements.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 	<link rel="stylesheet" type="text/css" href="app/styles/picanimation.css">
 	<link rel="stylesheet" type="text/css" href="app/styles/artcollection.css">
 	<link rel="stylesheet" type="text/css" href="app/styles/awardcard.css">
+	<link rel="stylesheet" type="text/css" href="app/styles/contact.css">
+
 
 	<!-- Font -->
 	<link href="https://fonts.googleapis.com/css?family=Abel|Farsan|Galada|Lobster|Mitr|Poiret+One|Scope+One|Shadows+Into+Light" rel="stylesheet">
