--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 	<script type="text/javascript" src="app/directives/newspapercard.js"></script>
 	<script type="text/javascript" src="app/directives/anchorLink.js"></script>
 	<script type="text/javascript" src="app/directives/artPiece.js"></script>
+	<script type="text/javascript" src="app/directives/editButton.js"></script>
 
 	<!-- Services -->
 	<script type="text/javascript" src="app/services/NodeConnection.js"></script>	
