Fake 'login' flag for testing. Added edit and add buttons to most sections, non functioning. Beginning of refactoring of prompt information from main controller. Added 'login' button to anchorlinks. Cleaned up some css.

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 	<script type="text/javascript" src="app/directives/anchorLink.js"></script>
 	<script type="text/javascript" src="app/directives/artPiece.js"></script>
 	<script type="text/javascript" src="app/directives/editButton.js"></script>
+	<script type="text/javascript" src="app/directives/addCard.js"></script>
 
 	<!-- Services -->
 	<script type="text/javascript" src="app/services/NodeConnection.js"></script>	
