Massive feature expansion. Added ability to edit awards and newspapers in the client. Service added new function call. Server massively expanded with new data routes. Refactor of server is now a requirement to proceed. Image alteration still does not work. Front end requires further revision. Revision to how directives are updated is also required.

--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
 	<link rel="stylesheet" type="text/css" href="app/styles/artcollection.css">
 	<link rel="stylesheet" type="text/css" href="app/styles/awardcard.css">
 	<link rel="stylesheet" type="text/css" href="app/styles/contact.css">
-
+	<link rel="stylesheet" type="text/css" href="app/styles/prompt.css">
 
 	<!-- Font -->
 	<link href="https://fonts.googleapis.com/css?family=Abel|Farsan|Galada|Lobster|Mitr|Poiret+One|Scope+One|Shadows+Into+Light" rel="stylesheet">
-
 
 	<!-- Sources -->
 	<script type="text/javascript" src="node_modules/angular/angular.min.js"></script>
@@ -32,6 +31,7 @@
 	<script type="text/javascript" src="app/controllers/MainController.js"></script>
 	<script type="text/javascript" src="app/controllers/ArtController.js"></script>
 	<script type="text/javascript" src="app/controllers/AnimationController.js"></script>
+	<script type="text/javascript" src="app/controllers/PromptController.js"></script>
 
 	<!-- Primary Directives -->
 	<script type="text/javascript" src="app/directives/artCollectionSection.js"></script>
