--- a/app/promptviews/titledescfiles.html
+++ b/app/promptviews/titledescfiles.html
@@ -13,9 +13,13 @@
 	        <label>Description</label>
 	        <input ng-model="elemData.description">
       	</md-input-container>   
-      	<input id="fileUpload" type="file" hide>
-      	<md-button ng-click="setFile()" class="md-raised">Upload Image</md-button>		
-      	<md-button ng-click="displayFileInfo()" class="md-raised">Display Info</md-button>		
-      	<md-button ng-click="makeBackendRequest()" class="md-raised">Backend Request</md-button>	
+      	<md-input-container class="align-center" flex>
+      		<div id="prompt-button-container" layout="column"> 
+      			<input id="fileUpload" type="file" hide>
+		      	<md-button ng-click="setFile()" class="md-raised">Upload Image</md-button>	
+		      	<md-button ng-click="displayFileInfo()" class="md-raised">Display Info</md-button>		
+		      	<md-button ng-click="makeBackendRequest()" class="md-raised">Save Changes</md-button>		
+      		</div>	      	
+      	</md-input-container>      		
 	</md-card-content>
 </md-card>
