style tweaks to awards

--- a/app/promptviews/titledescfiles.html
+++ b/app/promptviews/titledescfiles.html
@@ -11,7 +11,7 @@
       	</md-input-container>	
       	<md-input-container>
 	        <label>Description</label>
-	        <input ng-model="elemData.description">
+	        <textarea ng-model="elemData.description" md-maxlength="150" rows="3" md-select-on-focus></textarea>
       	</md-input-container>   
       	<md-input-container class="align-center" flex>
       		<div id="prompt-button-container" layout="column"> 
